@@ -1,5 +1,12 @@
 2009-12-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Enable reduction code in LL suite.
+
+	* benchmarks/livermore/kernel3.c,
+	* benchmarks/livermore/kernel4.c: Enable REDUCTIONS code.
+
+2009-12-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Embed more information in benchmark results.
 	
 	* build-aux/genbench.sh: Use `-t' with `slr' when running
